--- a/EstiloLinkTree.css
+++ b/EstiloLinkTree.css
@@ -1,6 +1,6 @@
 /* Importa fontes do Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Alex+Brush&family=Dancing+Script:wght@400;700&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lavishly+Yours&family=Montserrat:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+BE+VLG:wght@100..400&display=swap');
 :root {
   --azul-profundo: #c06371;
   --dourado: #fff;
@@ -95,6 +95,8 @@ body {
 }
 
 .profile-bio {
+  font-family: "Playwrite BE VLG", serif;
+  font-optical-sizing: auto;
   margin-top: 10px;
   color: #fff;
   font-size: 1rem;
@@ -132,12 +134,12 @@ body {
   
   .link:hover {
     transform: translateY(-3px);
-    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0px 20px rgb(255, 56, 106);;
   }
   
   .link:active {
     transform: translateY(-1px);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0px 10px pink;
   }
   
   /* Efeito "ripple" ao clicar */
@@ -195,7 +197,7 @@ body {
 
 .icon:hover {
   transform: scale(1.2) rotate(15deg);
-  filter: drop-shadow(0 0 5px #0059b3);
+  filter: drop-shadow(0 0 5px #b4176e);
 }
 
 .icon:hover::after {
